--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img src="r.png" class="character" />
         </div>
       </a>
-     <audio controls autoplay>
+     <audio controls autoplay='on'>
   
   <source src="shree.mp3" type="audio/mpeg">
  
